branches/wip/Archive/0f5da8297fecb05edda32332e61ffe17-61c3814520a8d4318f681038dc4b4da7/output
main.cpp: In function 'int main()':
main.cpp:14:8: error: call of overloaded 'f(int32_t&)' is ambiguous
     f(v);
        ^
main.cpp:14:8: note: candidates are:
main.cpp:4:6: note: void f(uint32_t)
 void f(uint32_t v) {
      ^
main.cpp:8:6: note: void f(uint16_t)
 void f(uint16_t v) {
      ^
